Updating read me with instructions